--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
         "morgan": "^1.10.0",
         "nodemailer": "^6.4.17",
         "nodemon": "^2.0.6",
-        "validator": "^13.5.2"
+        "validator": "^13.5.2",
+        "xss-clean": "^0.1.1"
     },
     "devDependencies": {
         "eslint": "^7.15.0",
